--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://kumaromkar01.github.io/NewsApp",
+  "homepage": "https://kumaromkar01.github.io/News4U",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
